packages/next-swc/crates/core/tests/errors/next-font-loaders/options-object/output.js
import a from "@next/font/google?ABeeZee;{}";
import a from "@next/font/google?ABeeZee;{}";
import a from "@next/font/google?ABeeZee;{}";
import a from "@next/font/google?ABeeZee;{}";
const a = fn({
    10: 'hello'
});
const a = fn({
    variant: [
        i1
    ]
});
const a = fn({
    variant: ()=>{}
});
const a = fn({
    ...{}
});
